All specs on green, fixed a problem where having a \n character in string or blob would cause decoding error, decoding and encoding as good as they can be, new OSCArgument module for custom message argument coercion, next: OSC 1.1 compatibility mode

--- a/README.rdoc
+++ b/README.rdoc
@@ -2,9 +2,9 @@
 
 Concise OSC client for Ruby
 
-  * 1.9.1 compatible
+  * 1.9.1 and jRuby compatible
   * Complies with OSC 1.0 specification
-  * Uses EventMachine for networking and low cost precise bundle scheduling
+  * Uses EventMachine for networking and lightweight soft-real-time bundle scheduling
   
 http://github.com/maca/ruby-osc
   
