--- a/README.rdoc
+++ b/README.rdoc
@@ -13,6 +13,8 @@ Concise OSC implementation for Ruby
     require 'rubygems'
     require 'ruby-osc'
     
+    include OSC
+
     OSC.run do
       server = Server.new 9090
       client = Client.new 9090
